--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^4.29.6",
     "axios": "^1.4.0",
+    "dompurify": "^3.0.2",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
     "react-toastify": "^9.1.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
