--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "json-server --watch db.json --port 3001"
+    "start": "concurrently \"json-server --watch db.json --port 3001\" \"vite\""
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^4.29.6",
     "axios": "^1.4.0",
+    "concurrently": "^8.0.1",
     "dompurify": "^3.0.2",
+    "embla-carousel-autoplay": "^8.0.0-rc03",
+    "embla-carousel-react": "^8.0.0-rc03",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
