--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^4.29.6",
+    "apexcharts": "^3.40.0",
     "axios": "^1.4.0",
     "concurrently": "^8.0.1",
     "dompurify": "^3.0.2",
@@ -20,6 +21,7 @@
     "embla-carousel-react": "^8.0.0-rc03",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
