--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "concurrently \"json-server --watch db.json --port 3001\" \"vite\""
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^4.29.6",
     "apexcharts": "^3.40.0",
