--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "embla-carousel-autoplay": "^8.0.0-rc03",
     "embla-carousel-react": "^8.0.0-rc03",
     "json-server": "^0.17.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
