--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "uuid": "^9.0.0"
