--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "embla-carousel-autoplay": "^8.0.0-rc03",
     "embla-carousel-react": "^8.0.0-rc03",
     "json-server": "^0.17.3",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -30,6 +31,7 @@
     "react-router-dom": "^6.11.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwind-scrollbar-hide": "^1.1.7",
     "uuid": "^9.0.0"
   },
